--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@
 - title: Theme Setup
   url: /theme-setup/
 
-- title: External Link
-  url: http://mademistakes.com
+- title: Data Source
+  url: https://www.kaggle.com/GoogleNewsLab/health-searches-us-county/home
