--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            BST 260 Final Project
+title:            
 description:      Describe your website here.
 disqus_shortname: 
 reading_time:     true
